--- a/client-app/public/index.html
+++ b/client-app/public/index.html
@@ -1,6 +1,11 @@
 <html>
   <body>
     <div id="root"></div>
+    
+    <!-- this code is from auth0, found at https://auth0.com/blog/modern-full-stack-development-with-nestjs-react-typescript-and-mongodb-part-2/#Building-the-Frontend-with-React-and-TypeScript -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src="./build/app.js"></script>
   </body>
 </html>
